# Android_SVC_Edu

./: .gitignore  CMakeLists.txt  README.md
include/: main.h
outputs/arm64-v8a/: SVC_edu
src/: main.cpp
